# denali

./: README.md  index.html  package-lock.json  package.json
back-end/: .env  Cargo.toml  diesel.toml
back-end/migrations/00100_create_budget/: up.sql
back-end/migrations/00200_create_vendors/: up.sql
back-end/migrations/00300_create_accounts/: down.sql  up.sql
back-end/migrations/00400_create_transactions/: up.sql
back-end/migrations/2026-06-19-180458-0000_create_budget/: down.sql  up.sql
back-end/migrations/2026-06-20-232213-0000_create_vendors/: down.sql  up.sql
back-end/migrations/2026-06-20-242007-0000_create_transactions/: down.sql  up.sql
back-end/src/: main.rs
back-end/src/controllers/: accounts_controller.rs  budget_controller.rs  mod.rs  transactions_controller.rs
back-end/src/models/: accounts.rs  budget.rs  mod.rs  transactions.rs  vendors.rs
back-end/src/models/requests/: add_budget_item_request.rs  delete_budget_item_request.rs  edit_budget_item_request.rs  get_budget_items_request.rs  mod.rs
back-end/src/models/responses/: budget_item.rs  mod.rs
back-end/src/repositories/: accounts_repository.rs  budget_repository.rs  mod.rs  schema.rs  transactions_repository.rs
front-end/: index.html  package-lock.json  package.json
front-end/src/: App.vue  main.ts
front-end/src/assets/: base.css  main.css
src/: App.vue
src/components/: NavBar.vue
src/dtos/: budget.ts
src/router/: index.ts
src/services/: budgetService.ts
src/shared/: constants.ts
src/views/: Budget.vue  BudgetPage.vue  Overview.vue  OverviewPage.vue
(+38 files in other folders)
