[package]
name = "denali-server"
version = "0.1.0"
edition = "2024"

[dependencies]
axum = "0.8.9"
rust_decimal = "1.42.1"
serde = { version = "1.0.228", features = ["derive"] }
tokio = { version = "1.52.3", features = ["full"] }
tower = "0.5.3"
tower-http = { version = "0.7.0", features = ["cors"] }
tracing = "0.1.44"
tracing-subscriber = "0.3.23"
